<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_servers">

    <fragment
        android:id="@+id/nav_servers"
        android:name="me.xap3y.spitus.ui.servers.ServersFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_servers_to_nav_developer"
            app:destination="@id/nav_developer" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="me.xap3y.spitus.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="me.xap3y.spitus.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_developer"
        android:name="me.xap3y.spitus.ui.developer.DeveloperFragment"
        android:label="@string/menu_dev"
        tools:layout="@layout/fragment_developer" >
        <action
            android:id="@+id/action_nav_developer_to_nav_servers"
            app:destination="@id/nav_servers" />
    </fragment>
</navigation>