<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".ui.developer.DeveloperFragment">

    <FrameLayout
        android:id="@+id/devFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#322D2D"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/text_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dev_page_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameInput"
        android:layout_width="334dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/dev_page_input_name_hint_color"
        android:textCursorDrawable='@null'
        app:boxStrokeColor="#9F9F9F"
        app:hintTextColor="#00F494"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_developer"
        app:placeholderTextColor="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="334dp"
            android:layout_height="match_parent"
            android:background="#00A5A7A8"
            android:backgroundTint="#00FFFFFF"
            android:hint="@string/dev_page_input_name_hint"
            android:paddingBottom="1dp"
            android:text="@string/dev_page_input_name_default"
            android:textColor="@color/dev_page_input_name_text_color"
            android:textColorHint="@color/dev_page_input_address_text_color"
            android:textCursorDrawable='@null'
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="334dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/dev_page_input_address_hint_color"
        android:textCursorDrawable='@null'
        app:boxStrokeColor="#9F9F9F"
        app:hintTextColor="#00F494"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameInput"
        app:placeholderTextColor="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="334dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:hint="@string/dev_page_input_address_hint"
            android:paddingBottom="1dp"
            android:text="@string/dev_page_input_address_default"
            android:textColor="@color/dev_page_input_address_text_color"
            android:textCursorDrawable='@null'
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="334dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/dev_page_input_port_hint_color"
        android:textCursorDrawable='@null'
        app:boxStrokeColor="#9F9F9F"
        app:hintTextColor="#00F494"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:placeholderTextColor="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/port"
            android:layout_width="334dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:hint="@string/dev_page_input_port_hint"
            android:paddingBottom="1dp"
            android:text="@string/dev_page_input_port_default"
            android:textColor="@color/dev_page_input_port_text_color"
            android:textCursorDrawable='@null' />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/dev_page_button_text_bg"
        android:text="@string/dev_page_button_text"
        android:textColor="@color/dev_page_button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>